--- a/Grupo_Resistencia carrusel y menu hamburguesa/index.html
+++ b/Grupo_Resistencia carrusel y menu hamburguesa/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <script src="https://kit.fontawesome.com/7ddcef2803.js" crossorigin="anonymous"></script>
-    <title>Inicio</title>
+    <title>Document</title>
 </head>
-
 <body>
 
 
@@ -21,33 +19,24 @@
 
         <div class="slider-frame">
             <ul>
-                <!-- GDT: Comenté la barra porque sino no me levantaba las imágenes. Fijate si te funciona así sino revertí el cambio. -->
-                <!-- <li><img src="/img/item A.jpeg" alt=""></li>
+                <li><img src="/img/item A.jpeg" alt=""></li>
                 <li><img src="/img/item B.jpeg" alt=""></li>
                 <li><img src="/img/item C.jpg" alt=""></li>
                 <li><img src="/img/item D.jpg" alt=""></li>
-                <li><img src="/img/item E.jpg" alt=""></li> -->
-                
-                <li><img src="img/item A.jpeg" alt=""></li>
-                <li><img src="img/item B.jpeg" alt=""></li>
-                <li><img src="img/item C.jpg" alt=""></li>
-                <li><img src="img/item D.jpg" alt=""></li>
-                <li><img src="img/item E.jpg" alt=""></li>
+                <li><img src="/img/item E.jpg" alt=""></li>
             </ul>
         </div>
 
 
 
-        <h1 class="titulito">EMPRESA PARA LAS EMPRESAS</h1>
+<h1 class="titulito">EMPRESA PARA LAS EMPRESAS</h1>
 
 
 
-        <P class="titulo1">La empresa que viene a darle la solucion a las demas empresas, con nosotros usted podra
-            realizar todo aquello relacionado con el mundo del home-office
-            equipamiento de su espacio de trabajo para garantizarse usted mismo y a sus empleados un buen arsenal de
-            elementos para llevar a cabo el día a día de un oficinista. <br>
-            Cada uno de nuestros productos ya sea de fabricacion nacional o importado.
-        </P>
+<P class="titulo1">La empresa que viene a darle la solucion a las demas empresas, con nosotros usted podra realizar todo aquello relacionado con el mundo del home-office
+    equipamiento de su espacio de trabajo para garantizarse usted mismo y a sus empleados un buen arsenal de elementos para llevar a cabo el día a día de un oficinista. <br>
+Cada uno de nuestros productos ya sea de fabricacion nacional o importado 
+</P>
     </main>
 
 
@@ -57,5 +46,4 @@
 
     <script src="header-footer.js"></script>
 </body>
-
 </html>
