--- a/Manuales.html
+++ b/Manuales.html
@@ -22,7 +22,7 @@
 
         <!-- --------------------------SE AÑADEN LINKS PARA DESCARGA DE MANUALES------------------- -->
 
-        <h1 class="titulote">CLIC EN LA IMAGEN PARA DESCARGAR EL MANUAL</h1>
+        <h1>Click en la imagen para descargar el manual</h1>
         <div class="imgcontainer">
             <div class="imagesitem">
                 <a href="https://files.support.epson.com/docid/cpd4/cpd42419.pdf" download>
@@ -144,19 +144,22 @@
 
             <div class="imagesitem">
                 <a href="https://files.support.epson.com/docid/cpd4/cpd42419.pdf" download>
-                    <img src="https://w1.pngwing.com/pngs/463/92/png-transparent-copier-copier-copier-printer-xerox-laser-printing-scanner-xerox-workcentre-5325-xerox-workcentre-6027ni-thumbnail.png" alt=""> </a>
+                    <img src="https://w1.pngwing.com/pngs/463/92/png-transparent-copier-copier-copier-printer-xerox-laser-printing-scanner-xerox-workcentre-5325-xerox-workcentre-6027ni-thumbnail.png"
+                        alt=""> </a>
             </div>
 
 
             <div class="imagesitem">
                 <a href="https://files.support.epson.com/docid/cpd4/cpd42419.pdf" download>
-                    <img src="https://w7.pngwing.com/pngs/390/410/png-transparent-konica-minolta-multi-function-printer-copier-baizhuo-electronics-electronic-device-toner-thumbnail.png" alt=""> </a>
+                    <img src="https://w7.pngwing.com/pngs/390/410/png-transparent-konica-minolta-multi-function-printer-copier-baizhuo-electronics-electronic-device-toner-thumbnail.png"
+                        alt=""> </a>
             </div>
 
 
             <div class="imagesitem">
                 <a href="https://files.support.epson.com/docid/cpd4/cpd42419.pdf" download>
-                    <img src="https://w7.pngwing.com/pngs/977/250/png-transparent-multi-function-printer-copier-ricoh-printing-printer-angle-electronics-photostat-machine-thumbnail.png" alt=""> </a>
+                    <img src="https://w7.pngwing.com/pngs/977/250/png-transparent-multi-function-printer-copier-ricoh-printing-printer-angle-electronics-photostat-machine-thumbnail.png"
+                        alt=""> </a>
             </div>
 
 
