--- a/Ventas.html
+++ b/Ventas.html
@@ -26,7 +26,8 @@
                     alt="silla_profesional" class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Sillas Profesionales</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
+                    
                 </div>
             </div>
 
@@ -35,7 +36,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Sillones Ejecutivos</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -44,7 +45,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Sillas Operativas</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -53,7 +54,7 @@
                     alt="silla_residencial" class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Sillas Residenciales</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
         </div>
@@ -68,7 +69,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Escritorios</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -77,7 +78,7 @@
                     alt="puesto_de_trabajo" class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Puestos de Trabajo</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -86,7 +87,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Mesas de Reunión</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -95,7 +96,7 @@
                     alt="escritorio_gamer" class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Escritorios Gamer</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
         </div>
@@ -110,7 +111,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Epson</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -119,7 +120,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Xerox</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -128,7 +129,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Lexmark</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -138,7 +139,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Ricoh</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
         </div>
@@ -151,7 +152,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Pantum</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -160,7 +161,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Cannon</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -169,7 +170,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Hewlett Packard</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -178,7 +179,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Brother</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -196,7 +197,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Lenovo</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -205,7 +206,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Acer</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -214,7 +215,7 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Asus</p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
 
@@ -224,14 +225,15 @@
                     class="producto__imagen">
                 <div class="producto__informacion">
                     <p class="producto__nombre"> Dell </p>
-                    <p class="producto__precio">Consultar</p>
+                    <a href="Contacto.html" class="producto__precio">Consultar</a>
                 </div>
             </div>
         </div>
 
         <br>
         <div>
-            <h1> Proximamente mas productos para tu empresa...</h1>
+            <p class="titulito">Proximamente más productos para tu empresa...</p>
+                
         </div>
         <br>
 
