--- a/index.html
+++ b/index.html
@@ -21,12 +21,6 @@
 
         <div class="slider-frame">
             <ul>
-                <!-- GDT: Comenté la barra porque sino no me levantaba las imágenes. Fijate si te funciona así sino revertí el cambio. -->
-                <!-- <li><img src="/img/item A.jpeg" alt=""></li>
-                <li><img src="/img/item B.jpeg" alt=""></li>
-                <li><img src="/img/item C.jpg" alt=""></li>
-                <li><img src="/img/item D.jpg" alt=""></li>
-                <li><img src="/img/item E.jpg" alt=""></li> -->
 
                 <li class="slider-frame"><img src="img/item A.jpeg" alt=""></li>
                 <li class="slider-frame"><img src="img/item B.jpeg" alt=""></li>
@@ -35,21 +29,21 @@
                 <li class="slider-frame"><img src="img/item E.jpg" alt=""></li>
             </ul>
         </div>
- 
 
-<h1 class="titulote">EMPRESA PARA LAS EMPRESAS</h1>
-<hr>
+
+        <h1 class="titulote">EMPRESA PARA LAS EMPRESAS</h1>
+        <hr>
         <P class="titulito">
-            "Somos proveedores especializados en suministros y tecnología para entornos empresariales,
+            Somos proveedores especializados en suministros y tecnología para entornos empresariales,
             brindando una variedad de productos esenciales como papel de calidad superior, herramientas de escritura de
             diseño exclusivo, además de soluciones de impresión y reproducción de vanguardia con calidad premium. <br>
         </P>
-<hr>
+        <hr>
 
 
-</main>
+    </main>
 
-        
+
 
     <footer id="idfooter"></footer>
 
